# homelab

./: .gitignore  README.md
.claude/: settings.json
dockercompose/cloudflaretunnel/: docker-compose.yml
dockercompose/grafana/: docker-compose.yml
dockercompose/nextcloud/: compose.yml  docker-compose.yml
dockercompose/nginx/: docker-compose.yml
dockercompose/nginxproxymanager/: docker-compose.yml
dockercompose/portainer/: docker-compose.yml
dockercompose/reverse_proxy/: README.md  docker-compose.yml
dockerfiles/: ollama.dockerfile
documentation/: PROGRESS.md  architecture.md  storage-setup-commands.md  zfs-data-corruption.md  zfs-maintenance.md  zfs-verification.md
documentation/logs/: terraform_apply
monitoring/: README.md  jan1_2026_healthcheck.md
monitoring/analyzer/: proxmox-analyzer.py  pyproject.toml  requirements.txt  setup.py
monitoring/analyzer/proxmox_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
monitoring/data/: jan-1-after-remediation.json  jan-1-example.json
monitoring/reports/: analysis-report-after-remediation.md  analysis-report-detailed.md  analysis-report.md  remediation-steps.md
monitoring/server/: proxmox-data-collector.sh
notes/: jan1_2026_healthcheck.md
scripts/: README-architecture-split.md  README.md  install-healthcheck.sh  proxmox-analyzer.py  proxmox-healthcheck.sh
terraform/: .terraform.lock.hcl  README.md  get_vm_details.sh  main.tf  outputs.tf  providers.tf  terraform.infra.tfvars  terraform.infra.tfvars.example  terraform.secrets.example  terraform.tfvars.example  terraform.tfvars.infra.example  variables.tf
terraform/modules/container/: main.tf  outputs.tf  variables.tf
terraform/modules/vm/: main.tf  outputs.tf  variables.tf
(+2 files in other folders)
