[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proxmox-analyzer"
version = "1.0.0"
description = "Proxmox Health Check Analyzer"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Joshua King"}
]
dependencies = [
    "dataclasses>=0.8; python_version < '3.7'",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=0.950",
]
viz = [
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
]
full = [
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "pyyaml>=6.0",
    "rich>=12.0.0",
]

[tool.ruff]
# Ruff configuration
line-length = 88
target-version = "py36"

# Enable pycodestyle (E), Pyflakes (F), isort (I), and other checks
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]

ignore = [
    "E501",  # line too long (handled by formatter)
]

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

[tool.ruff.isort]
# Use black-compatible isort settings
force-single-line = false
force-wrap-aliases = false
known-first-party = ["proxmox_analyzer"]

[tool.mypy]
python_version = "3.6"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
